@@ -5,8 +5,10 @@ import com.intellij.CommonBundle;
 import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.icons.AllIcons;
+import com.intellij.ide.HelpTooltip;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.WelcomeWizardUtil;
+import com.intellij.ide.actions.QuickChangeLookAndFeel;
 import com.intellij.ide.plugins.DynamicPluginListener;
 import com.intellij.ide.plugins.IdeaPluginDescriptor;
 import com.intellij.ide.ui.*;
@@ -15,6 +17,7 @@ import com.intellij.ide.ui.laf.darcula.DarculaLaf;
 import com.intellij.ide.ui.laf.darcula.DarculaLookAndFeelInfo;
 import com.intellij.ide.util.PropertiesComponent;
 import com.intellij.openapi.Disposable;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.components.PersistentStateComponent;
@@ -29,10 +32,10 @@ import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.ui.DialogWrapper;
 import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.ui.popup.JBPopupFactory;
+import com.intellij.openapi.ui.popup.ListPopup;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
-import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.UserDataHolder;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.wm.impl.IdeGlassPaneImpl;
@@ -40,11 +43,13 @@ import com.intellij.ui.*;
 import com.intellij.ui.components.DefaultLinkButtonUI;
 import com.intellij.ui.popup.OurHeavyWeightPopup;
 import com.intellij.ui.scale.JBUIScale;
+import com.intellij.ui.tree.ui.DefaultTreeUI;
 import com.intellij.util.EventDispatcher;
 import com.intellij.util.IJSwingUtilities;
 import com.intellij.util.ObjectUtils;
+import com.intellij.util.SVGLoader;
 import com.intellij.util.concurrency.SynchronizedClearableLazy;
-import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.messages.MessageBus;
 import com.intellij.util.ui.*;
 import org.intellij.lang.annotations.JdkConstants;
 import org.jdom.Element;
@@ -61,6 +66,7 @@ import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
+import java.net.URL;
 import java.util.List;
 import java.util.*;
 import java.util.function.BooleanSupplier;
@@ -72,6 +78,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static final Logger LOG = Logger.getInstance(LafManager.class);
 
   @NonNls private static final String ELEMENT_LAF = "laf";
+  @NonNls private static final String ELEMENT_PREFERRED_LIGHT_LAF = "preferred-light-laf";
+  @NonNls private static final String ELEMENT_PREFERRED_DARK_LAF = "preferred-dark-laf";
+  @NonNls private static final String ATTRIBUTE_AUTODETECT = "autodetect";
   @NonNls private static final String ATTRIBUTE_CLASS_NAME = "class-name";
   @NonNls private static final String ATTRIBUTE_THEME_NAME = "themeId";
 
@@ -99,11 +108,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return infos;
   });
 
-  private final UIManager.LookAndFeelInfo myDefaultLightTheme = getDefaultLightTheme();
-  private final UIManager.LookAndFeelInfo myDefaultDarkTheme = new DarculaLookAndFeelInfo();
-  private final UIDefaults ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
+  private final UIManager.LookAndFeelInfo myDefaultLightLaf = getDefaultLightTheme();
+  private final UIManager.LookAndFeelInfo myDefaultDarkLaf = new DarculaLookAndFeelInfo();
+  private final Map<Object, Object> ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
 
   private UIManager.LookAndFeelInfo myCurrentLaf;
+  private UIManager.LookAndFeelInfo myPreferredLightLaf;
+  private UIManager.LookAndFeelInfo myPreferredDarkLaf;
+
   private final Map<LafReference, HashMap<String, Object>> myStoredDefaults = new HashMap<>();
 
   // A constant from Mac OS X implementation. See CPlatformWindow.WINDOW_ALPHA
@@ -111,8 +123,22 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   private static final Map<String, String> ourLafClassesAliases = new HashMap<>();
   private static final Map<String, Integer> lafNameOrder = new HashMap<>();
+  private static final int maxNameOrder;
 
-  private CollectionComboBoxModel<LafReference> myLafComboBoxModel;
+  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myLafComboBoxModel =
+    new SynchronizedClearableLazy<>(() -> new LafComboBoxModel());
+
+  private final SynchronizedClearableLazy<ActionToolbar> settingsToolbar =
+    new SynchronizedClearableLazy<>(() -> {
+      DefaultActionGroup group = new DefaultActionGroup(new PreferredLafsAction());
+      ActionToolbar toolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.TOOLBAR, group, true);
+      toolbar.getComponent().setOpaque(false);
+      return toolbar;
+    });
+
+  private final SystemDarkThemeDetector lafDetector = SystemDarkThemeDetector.createDetector(this::syncLaf);
+
+  private static final LafReference SEPARATOR = new LafReference("", null, null);
 
   static {
     ourLafClassesAliases.put("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
@@ -122,11 +148,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     lafNameOrder.put("Windows 10 Light", 1);
     lafNameOrder.put("Darcula", 2);
     lafNameOrder.put("High contrast", 3);
+
+    maxNameOrder = Collections.max(lafNameOrder.values());
   }
 
   private boolean myFirstSetup = true;
   private boolean myUpdatingPlugin = false;
-  private final Set<String> myThemesInUpdatedPlugin = new HashSet<>();
+  private @Nullable String myThemeIdBeforePluginUpdate = null;
+  private boolean autodetect;
 
   private static UIManager.LookAndFeelInfo getDefaultLightTheme() {
     for(UIThemeProvider provider: UIThemeProvider.EP_NAME.getExtensionList()) {
@@ -144,10 +173,10 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   @NotNull
   private List<UIManager.LookAndFeelInfo> computeLafList() {
     List<UIManager.LookAndFeelInfo> lafList = new ArrayList<>();
-    lafList.add(myDefaultLightTheme);
-    lafList.add(myDefaultDarkTheme);
+    lafList.add(myDefaultLightLaf);
+    lafList.add(myDefaultDarkLaf);
 
-    if (!SystemInfo.isMac) {
+    if (!SystemInfoRt.isMac) {
       for (UIManager.LookAndFeelInfo laf : UIManager.getInstalledLookAndFeels()) {
         String name = laf.getName();
         if (!"Metal".equalsIgnoreCase(name)
@@ -225,19 +254,47 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     updateUI();
 
     UIThemeProvider.EP_NAME.addExtensionPointListener(new UIThemeEPListener(), this);
-//    LafProvider.EP_NAME.addExtensionPointListener(new LafProviderEPListener(), this);
 
-    ApplicationManager.getApplication().getMessageBus().connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
+    MessageBus bus = ApplicationManager.getApplication().getMessageBus();
+    bus.connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
       @Override
       public void beforePluginUnload(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
         myUpdatingPlugin = isUpdate;
+        if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+          myThemeIdBeforePluginUpdate = ((UIThemeBasedLookAndFeelInfo) myCurrentLaf).getTheme().getId();
+        }
+        else {
+          myThemeIdBeforePluginUpdate = null;
+        }
       }
 
       @Override
       public void pluginLoaded(@NotNull IdeaPluginDescriptor pluginDescriptor) {
-        myThemesInUpdatedPlugin.clear();
+        myUpdatingPlugin = false;
+        myThemeIdBeforePluginUpdate = null;
       }
     });
+
+    detectAndSyncLaf();
+  }
+
+  private void detectAndSyncLaf() {
+    if (lafDetector.getDetectionSupported() && autodetect) {
+      lafDetector.check();
+    }
+  }
+
+  private void syncLaf(boolean systemDark) {
+    if (autodetect) {
+      boolean currentDark = myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
+                            UIUtil.isUnderDarcula();
+
+      UIManager.LookAndFeelInfo expectedLaf = systemDark ? myPreferredDarkLaf : myPreferredLightLaf;
+
+      if (currentDark != systemDark || myCurrentLaf != expectedLaf) {
+        QuickChangeLookAndFeel.switchLafAndUpdateUI(this, expectedLaf, true);
+      }
+    }
   }
 
   public void updateWizardLAF(boolean wasUnderDarcula) {
@@ -260,18 +317,25 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void loadState(@NotNull Element element) {
+    myCurrentLaf = loadLafState(element, ELEMENT_LAF, getDefaultLaf());
+    autodetect = Boolean.valueOf(element.getAttributeValue(ATTRIBUTE_AUTODETECT));
+    myPreferredLightLaf = loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myDefaultLightLaf);
+    myPreferredDarkLaf = loadLafState(element, ELEMENT_PREFERRED_DARK_LAF, myDefaultDarkLaf);
+  }
+
+  private UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NonNls String attrName, UIManager.LookAndFeelInfo defaultValue) {
     UIManager.LookAndFeelInfo laf = null;
-    Element lafElement = element.getChild(ELEMENT_LAF);
+    Element lafElement = element.getChild(attrName);
     if (lafElement != null) {
       laf = findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
     }
 
     // If LAF is undefined (wrong class name or something else) we have set default LAF anyway.
     if (laf == null) {
-      laf = getDefaultLaf();
+      laf = defaultValue;
     }
 
-    myCurrentLaf = laf;
+    return laf;
   }
 
   @Nullable
@@ -301,14 +365,29 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   @Override
   public Element getState() {
     Element element = new Element("state");
-    UIManager.LookAndFeelInfo laf = myCurrentLaf;
+    element.setAttribute(ATTRIBUTE_AUTODETECT, Boolean.toString(autodetect));
+
+    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel());
+
+    if (myPreferredLightLaf != myDefaultLightLaf) {
+      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myPreferredLightLaf);
+    }
+
+    if (myPreferredDarkLaf != myDefaultDarkLaf) {
+      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, myPreferredDarkLaf);
+    }
+
+    return element;
+  }
+
+  private static void getLafState(@NotNull Element element, @NonNls String attrName, UIManager.LookAndFeelInfo laf) {
     if (laf instanceof TempUIThemeBasedLookAndFeelInfo) {
       laf = ((TempUIThemeBasedLookAndFeelInfo)laf).getPreviousLaf();
     }
     if (laf != null) {
       String className = laf.getClassName();
       if (className != null) {
-        Element child = new Element(ELEMENT_LAF);
+        Element child = new Element(attrName);
         child.setAttribute(ATTRIBUTE_CLASS_NAME, className);
 
         if (laf instanceof UIThemeBasedLookAndFeelInfo) {
@@ -317,7 +396,6 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         element.addContent(child);
       }
     }
-    return element;
   }
 
   @Override
@@ -327,14 +405,38 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public CollectionComboBoxModel<LafReference> getLafComboBoxModel() {
-    if (myLafComboBoxModel == null) {
-      myLafComboBoxModel = new CollectionComboBoxModel<>(getLafReferences());
-    }
-    return myLafComboBoxModel;
+    return myLafComboBoxModel.getValue();
   }
 
-  private List<LafReference> getLafReferences() {
-    return ContainerUtil.map(myLaFs.getValue(), LafManagerImpl::createLafReference);
+  private List<LafReference> getAllReferences() {
+    List<LafReference> result = new ArrayList<>();
+    boolean addSeparator = false;
+    for (UIManager.LookAndFeelInfo info : myLaFs.getValue()) {
+      if (addSeparator) {
+        result.add(SEPARATOR);
+        addSeparator = false;
+      }
+      result.add(createLafReference(info));
+
+      if (Objects.equals(lafNameOrder.get(info.getName()), maxNameOrder)) {
+        if (lafDetector.getDetectionSupported()) {
+          result.add(LafReference.SYNC_OS);
+        }
+        addSeparator = true;
+      }
+    }
+
+    return result;
+  }
+
+  private void updateLafComboboxModel() {
+    myLafComboBoxModel.drop();
+  }
+
+  private void selectComboboxModel() {
+    if (myLafComboBoxModel.isInitialized()) {
+      myLafComboBoxModel.getValue().setSelectedItem(autodetect ? LafReference.SYNC_OS : createLafReference(myCurrentLaf));
+    }
   }
 
   @NotNull
@@ -352,13 +454,38 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
+  @Nullable
   public UIManager.LookAndFeelInfo getCurrentLookAndFeel() {
-    return myCurrentLaf;
+      return myCurrentLaf;
   }
 
   @Override
-  public LafReference getCurrentLookAndFeelReference() {
-    return createLafReference(myCurrentLaf);
+  public LafReference getLookAndFeelReference() {
+    return autodetect ? LafReference.SYNC_OS : createLafReference(getCurrentLookAndFeel());
+  }
+
+  @Override
+  public void setLookAndFeelReference(LafReference reference) {
+    if (reference != LafManager.LafReference.SYNC_OS) {
+      autodetect = false;
+      QuickChangeLookAndFeel.switchLafAndUpdateUI(this, findLaf(reference), true);
+    }
+    else {
+      autodetect = true;
+      selectComboboxModel();
+      detectAndSyncLaf();
+    }
+  }
+
+  @Override
+  public ListCellRenderer<LafReference> getLookAndFeelCellRenderer() {
+    return new LafCellRenderer();
+  }
+
+  @Override
+  @NotNull
+  public JComponent getSettingsToolbar() {
+    return settingsToolbar.getValue().getComponent();
   }
 
   public UIManager.LookAndFeelInfo getDefaultLaf() {
@@ -369,7 +496,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       LOG.error("Could not find wizard L&F: " + wizardLafName);
     }
 
-    if (SystemInfo.isMac) {
+    if (SystemInfoRt.isMac) {
       String className = IntelliJLaf.class.getName();
       UIManager.LookAndFeelInfo laf = findLaf(className);
       if (laf != null) return laf;
@@ -391,11 +518,11 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Nullable
   private UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
-    if (myDefaultLightTheme.getClassName().equals(className)) {
-      return myDefaultLightTheme;
+    if (myDefaultLightLaf.getClassName().equals(className)) {
+      return myDefaultLightLaf;
     }
-    if (myDefaultDarkTheme.getClassName().equals(className)) {
-      return myDefaultDarkTheme;
+    if (myDefaultDarkLaf.getClassName().equals(className)) {
+      return myDefaultDarkLaf;
     }
 
     for (UIManager.LookAndFeelInfo l : myLaFs.getValue()) {
@@ -431,6 +558,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
     UIManager.getDefaults().clear();
     UIManager.getDefaults().putAll(ourDefaults);
+    SVGLoader.setColorPatcherForSelection(null);
 
     // Set L&F
     if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) { // that is IDEA default LAF
@@ -438,6 +566,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       MetalLookAndFeel.setCurrentTheme(new IdeaBlueMetalTheme());
       try {
         UIManager.setLookAndFeel(laf);
+        updateIconsUnderSelection(false);
       }
       catch (Exception e) {
         Messages.showMessageDialog(
@@ -445,6 +574,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -453,6 +583,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       try {
         UIManager.setLookAndFeel(laf);
         AppUIUtil.updateForDarcula(true);
+        if (lafNameOrder.containsKey(lookAndFeelInfo.getName())) {
+          updateIconsUnderSelection(true);
+        }
       }
       catch (Exception e) {
         Messages.showMessageDialog(
@@ -460,6 +593,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -470,7 +604,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           laf = ((PluggableLafInfo)lookAndFeelInfo).createLookAndFeel();
         }
         else {
-          laf = ((LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).newInstance());
+          laf = (LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).getConstructor().newInstance();
 
           if (laf instanceof MetalLookAndFeel) {
             MetalLookAndFeel.setCurrentTheme(new DefaultMetalTheme());
@@ -479,6 +613,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
             if (laf instanceof UserDataHolder) {
               UserDataHolder userDataHolder = (UserDataHolder)laf;
               userDataHolder.putUserData(UIUtil.LAF_WITH_THEME_KEY, Boolean.TRUE);
+            }
+            if (lafNameOrder.containsKey(lookAndFeelInfo.getName()) && lookAndFeelInfo.getName().endsWith("Light")) {
+              updateIconsUnderSelection(false);
             }
           }
         }
@@ -491,6 +628,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
@@ -505,15 +643,17 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
+        LOG.error(e);
         return;
       }
     }
 
-    if (SystemInfo.isMacOSYosemite) {
+    if (SystemInfoRt.isMac) {
       installMacOSXFonts(UIManager.getLookAndFeelDefaults());
     }
 
     myCurrentLaf = ObjectUtils.chooseNotNull(lookAndFeelInfo, findLaf(lookAndFeelInfo.getClassName()));
+    selectComboboxModel();
 
     if (!myFirstSetup) {
       if (!lockEditorScheme) {
@@ -526,6 +666,31 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       }
     }
     myFirstSetup = false;
+  }
+
+  private static void updateIconsUnderSelection(boolean darcula) {
+    HashMap<String, String> map = new HashMap<>();
+    if (darcula) {
+      map.put("#5e5e5e", "#5778ad");
+      map.put("#c75450", "#a95768");
+      map.put("#6e6e6e", "#afb1b3");
+      map.put("#f26522", "#b76554");
+      map.put("#f26522b3", "#d38369");
+    } else {
+      map.put("#6e6e6e", "#afb1b3");
+      map.put("#db5860", "#b75e73");
+      map.put("#f26522", "#b56a51");
+      map.put("#f26522b3", "#d38369");
+    }
+    HashMap<String, Integer> alpha = new HashMap<>();
+    map.forEach((key, value) -> alpha.put(value, 255));
+
+     SVGLoader.setColorPatcherForSelection(new SVGLoader.SvgElementColorPatcherProvider() {
+       @Override
+       public SVGLoader.@Nullable SvgElementColorPatcher forURL(@Nullable URL url) {
+         return SVGLoader.newPatcher(null, map, alpha);
+       }
+     });
   }
 
   private void updateEditorSchemeIfNecessary(UIManager.LookAndFeelInfo oldLaf, boolean processChangeSynchronously) {
@@ -624,7 +789,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @NotNull
   private static FontUIResource getFont(String yosemite, int size, @JdkConstants.FontStyle int style) {
-    if (SystemInfo.isMacOSElCapitan) {
+    if (SystemInfoRt.isMac) {
       // Text family should be used for relatively small sizes (<20pt), don't change to Display
       // see more about SF https://medium.com/@mach/the-secret-of-san-francisco-fonts-4b5295d9a745#.2ndr50z2v
       Font font = enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
@@ -678,7 +843,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   private static void patchTreeUI(UIDefaults defaults) {
     patchBorder(defaults, "Tree.border");
-    defaults.put("TreeUI", "com.intellij.ui.tree.ui.DefaultTreeUI");
+    defaults.put("TreeUI", DefaultTreeUI.class.getName());
     defaults.put("Tree.repaintWholeRow", true);
     if (isUnsupported(defaults.getIcon("Tree.collapsedIcon"))) {
       defaults.put("Tree.collapsedIcon", LafIconLookup.getIcon("treeCollapsed"));
@@ -773,7 +938,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     int popupWeight = OurPopupFactory.WEIGHT_MEDIUM;
     String property = System.getProperty("idea.popup.weight");
     if (property != null) property = StringUtil.toLowerCase(property).trim();
-    if (SystemInfo.isMacOSLeopard) {
+    if (SystemInfoRt.isMac) {
       // force heavy weight popups under Leopard, otherwise they don't have shadow or any kind of border.
       popupWeight = OurPopupFactory.WEIGHT_HEAVY;
     }
@@ -837,7 +1002,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void restoreOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getCurrentLookAndFeelReference();
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
     HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults != null) {
       for (String resource : ourPatchableFontResources) {
@@ -848,7 +1013,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void storeOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getCurrentLookAndFeelReference();
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
     HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults == null) {
       lfDefaults = new HashMap<>();
@@ -878,6 +1043,11 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
+  @Override
+  public boolean isAutoDetect() {
+    return autodetect;
+  }
+
   private static void repaintUI(Window window) {
     if (!window.isDisplayable()) {
       return;
@@ -894,13 +1064,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     String pasteActionKey = useSimpleActionKeys ? "paste" : DefaultEditorKit.pasteAction;
     String cutActionKey = useSimpleActionKeys ? "cut" : DefaultEditorKit.cutAction;
     // Ctrl+Ins, Shift+Ins, Shift+Del
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), cutActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_DOWN_MASK), cutActionKey);
     // Ctrl+C, Ctrl+V, Ctrl+X
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
   }
 
   public static void initInputMapDefaults(UIDefaults defaults) {
@@ -940,14 +1110,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       defaults.put(fontResource, uiFont);
     }
 
-    if (!SystemInfo.isMac) {
+    if (!SystemInfoRt.isMac) {
       defaults.put("PasswordField.font", monoFont);
     }
     defaults.put("TextArea.font", monoFont);
     defaults.put("TextPane.font", textFont);
     defaults.put("EditorPane.font", textFont);
   }
-
 
   private static class OurPopupFactory extends PopupFactory {
     public static final int WEIGHT_LIGHT = 0;
@@ -1038,7 +1207,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
-  private static class DefaultMenuArrowIcon extends MenuArrowIcon {
+  private static final class DefaultMenuArrowIcon extends MenuArrowIcon {
     private static final BooleanSupplier dark = () -> ColorUtil.isDark(UIManager.getColor("MenuItem.selectionBackground"));
     private DefaultMenuArrowIcon() {
       super(AllIcons.Icons.Ide.NextStep,
@@ -1080,15 +1249,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       newLaFs.add(newTheme);
       sortThemes(newLaFs);
       myLaFs.setValue(newLaFs);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
+
+      updateLafComboboxModel();
+
       // When updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
-      if (!myThemesInUpdatedPlugin.contains(theme.getId())) {
-        setCurrentLookAndFeel(newTheme);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(createLafReference(newTheme));
-        }
+      if (!autodetect && (!myUpdatingPlugin || newTheme.getTheme().getId().equals(myThemeIdBeforePluginUpdate))) {
+        setLookAndFeelImpl(newTheme, false, false);
         JBColor.setDark(newTheme.getTheme().isDark());
         updateUI();
       }
@@ -1103,10 +1269,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
           UITheme theme = ((UIThemeBasedLookAndFeelInfo)lookAndFeel).getTheme();
           if (theme.getId().equals(provider.id)) {
             if (lookAndFeel == getCurrentLookAndFeel()) {
-              switchLafTo = theme.isDark() ? myDefaultDarkTheme : myDefaultLightTheme;
-            }
-            else if (myUpdatingPlugin) {
-              myThemesInUpdatedPlugin.add(theme.getId());
+              switchLafTo = theme.isDark() ? myDefaultDarkLaf : myDefaultLightLaf;
             }
             ((EditorColorsManagerImpl) EditorColorsManager.getInstance()).handleThemeRemoved(theme);
             continue;
@@ -1115,91 +1278,157 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         list.add(lookAndFeel);
       }
       myLaFs.setValue(list);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
+      updateLafComboboxModel();
+
       if (switchLafTo != null) {
         setLookAndFeelImpl(switchLafTo, false, true);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(createLafReference(switchLafTo));
-        }
-        JBColor.setDark(switchLafTo == myDefaultDarkTheme);
+        JBColor.setDark(switchLafTo == myDefaultDarkLaf);
         updateUI();
       }
     }
   }
 
-  private class LafProviderEPListener implements ExtensionPointListener<LafProvider> {
+  private static class LafCellRenderer extends SimpleListCellRenderer<LafReference> {
+    private static final SeparatorWithText separator = new SeparatorWithText() {
+      @Override
+      protected void paintComponent(Graphics g) {
+        g.setColor(getForeground());
+
+        Rectangle bounds = new Rectangle(getWidth(), getHeight());
+        JBInsets.removeFrom(bounds, getInsets());
+
+        paintLine(g, bounds.x, bounds.y + bounds.height/2, bounds.width);
+      }
+    };
+
     @Override
-    public void extensionAdded(@NotNull LafProvider extension, @NotNull PluginDescriptor pluginDescriptor) {
-      PluggableLafInfo newLaf = extension.getLookAndFeelInfo();
-      List<UIManager.LookAndFeelInfo> lafList = myLaFs.getValue();
-      for (UIManager.LookAndFeelInfo lafInfo : lafList) {
-        if (lafInfo.getName().equals(newLaf.getName()) && lafInfo.getClassName().equals(newLaf.getClassName())) {
-          return;
+    public Component getListCellRendererComponent(JList<? extends LafReference> list,
+                                                  LafReference value,
+                                                  int index,
+                                                  boolean isSelected,
+                                                  boolean cellHasFocus) {
+      return value == SEPARATOR ? separator : super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+    }
+
+    @Override
+    public void customize(@NotNull JList<? extends LafReference> list, LafReference value, int index, boolean selected, boolean hasFocus) {
+      setText(value.toString());
+    }
+  }
+
+  private class LafComboBoxModel extends CollectionComboBoxModel<LafReference> {
+    private LafComboBoxModel() {
+      super(getAllReferences());
+    }
+
+    @Override
+    public void setSelectedItem(@Nullable Object item) {
+      if (item == SEPARATOR) return;
+      super.setSelectedItem(item);
+    }
+  }
+
+  private class PreferredLafsAction extends DefaultActionGroup {
+    private PreferredLafsAction() {
+      setPopup(true);
+      getTemplatePresentation().setIcon(AllIcons.General.GearPlain);
+      getTemplatePresentation().setText(IdeBundle.message("preferred.theme.text"));
+      getTemplatePresentation().setDescription(IdeBundle.message("preferred.theme.description"));
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
+    }
+
+    @Override
+    public boolean canBePerformed(@NotNull DataContext context) {
+      return true;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      ListPopup popup = JBPopupFactory.getInstance().
+        createActionGroupPopup(IdeBundle.message("preferred.theme.text"), getLafGroups(), e.getDataContext(), true, null, Integer.MAX_VALUE);
+
+      HelpTooltip.setMasterPopup(e.getInputEvent().getComponent(), popup);
+      Component component = e.getInputEvent().getComponent();
+      if (component instanceof ActionButtonComponent) {
+        popup.showUnderneathOf(component);
+      }
+      else {
+        popup.showInCenterOf(component);
+      }
+    }
+
+    private ActionGroup getLafGroups() {
+      List<UIManager.LookAndFeelInfo> lightLafs = new ArrayList<>();
+      List<UIManager.LookAndFeelInfo> darkLafs = new ArrayList<>();
+
+      for(UIManager.LookAndFeelInfo lafInfo: myLaFs.getValue()) {
+        if (lafInfo instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)lafInfo).getTheme().isDark() ||
+            lafInfo.getName().equals(DarculaLaf.NAME)) {
+          darkLafs.add(lafInfo);
+        }
+        else {
+          lightLafs.add(lafInfo);
         }
       }
 
-      List<UIManager.LookAndFeelInfo> newLaFs = new ArrayList<>(lafList.size() + 1);
-      newLaFs.addAll(lafList);
-      newLaFs.add(newLaf);
+      DefaultActionGroup myGroup = new DefaultActionGroup();
+      myGroup.addAll(createThemeActions(IdeBundle.message("preferred.theme.light.header"), lightLafs, false));
+      myGroup.addAll(createThemeActions(IdeBundle.message("preferred.theme.dark.header"), darkLafs, true));
+      return myGroup;
+    }
 
-      sortThemes(newLaFs);
-
-      myLaFs.setValue(newLaFs);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
+    private Collection<AnAction> createThemeActions(@NotNull @NlsContexts.Separator String separatorText,
+                                 List<UIManager.LookAndFeelInfo> lafs, boolean isDark) {
+      List<AnAction> result = new ArrayList<>();
+      if (!lafs.isEmpty()) {
+        result.add(Separator.create(separatorText));
+        lafs.stream().map(l -> {
+          @NlsSafe String name = l.getName();
+          return new LafToggleAction(name, l, isDark);
+        }).forEach(a -> result.add(a));
       }
+      return result;
+    }
+  }
 
-      if (!myThemesInUpdatedPlugin.contains(newLaf.getName())) {
-        setCurrentLookAndFeel(newLaf);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(newLaf);
+  private class LafToggleAction extends ToggleAction {
+    private final UIManager.LookAndFeelInfo lafInfo;
+    private final boolean isDark;
+
+    private LafToggleAction(@Nls String name, UIManager.LookAndFeelInfo lafInfo, boolean isDark) {
+      super(name);
+      this.lafInfo = lafInfo;
+      this.isDark = isDark;
+    }
+
+    @Override
+    public boolean isSelected(@NotNull AnActionEvent e) {
+      return isDark ? lafInfo == myPreferredDarkLaf : lafInfo == myPreferredLightLaf;
+    }
+
+    @Override
+    public void setSelected(@NotNull AnActionEvent e, boolean state) {
+      if (isDark) {
+        if (myPreferredDarkLaf != lafInfo) {
+          myPreferredDarkLaf = lafInfo;
+          detectAndSyncLaf();
         }
-        JBColor.setDark(newLaf.isDark());
-        updateUI();
+      }
+      else {
+        if (myPreferredLightLaf != lafInfo) {
+          myPreferredLightLaf = lafInfo;
+          detectAndSyncLaf();
+        }
       }
     }
 
     @Override
-    public void extensionRemoved(@NotNull LafProvider extension, @NotNull PluginDescriptor pluginDescriptor) {
-      UIManager.LookAndFeelInfo switchLafTo = null;
-      List<UIManager.LookAndFeelInfo> list = new ArrayList<>();
-
-      PluggableLafInfo removedLafInfo = extension.getLookAndFeelInfo();
-
-      for (UIManager.LookAndFeelInfo lafInfo : getInstalledLookAndFeels()) {
-        if (lafInfo instanceof PluggableLafInfo) {
-          PluggableLafInfo pluggableLafInfo = (PluggableLafInfo)lafInfo;
-          if (StringUtil.equals(pluggableLafInfo.getName(), removedLafInfo.getName()) &&
-              StringUtil.equals(pluggableLafInfo.getClassName(), removedLafInfo.getClassName())) {
-
-            if (lafInfo == getCurrentLookAndFeel()) {
-              switchLafTo = pluggableLafInfo.isDark() ? myDefaultDarkTheme : myDefaultLightTheme;
-            }
-            else if (myUpdatingPlugin) {
-              myThemesInUpdatedPlugin.add(pluggableLafInfo.getName());
-            }
-            continue;
-          }
-        }
-
-        list.add(lafInfo);
-      }
-
-      myLaFs.setValue(list);
-      if (myLafComboBoxModel != null) {
-        myLafComboBoxModel.replaceAll(getLafReferences());
-      }
-
-      if (switchLafTo != null) {
-        setLookAndFeelImpl(switchLafTo, false, true);
-        if (myLafComboBoxModel != null) {
-          myLafComboBoxModel.setSelectedItem(switchLafTo);
-        }
-        JBColor.setDark(switchLafTo == myDefaultDarkTheme);
-        updateUI();
-      }
+    public boolean isDumbAware() {
+      return true;
     }
   }
 }
